--- a/wingdam.html
+++ b/wingdam.html
@@ -34,6 +34,7 @@
 
 <template name="asset">
 	<div class="span4">
+		{{#if currentUser}}<button class="delete"><i class="icon-trash"></i></button>{{/if}}
 		{{title}}
 	</div>
 </template>
