switching to bootstrap 3

--- a/wingdam.html
+++ b/wingdam.html
@@ -34,7 +34,8 @@
 
 <template name="asset">
 	<div class="span4">
-		{{#if currentUser}}<button class="delete"><i class="icon-trash"></i></button>{{/if}}
+		{{#if currentUser}}<button class="delete"><span class="glyphicon glyphicon-trash"></span>
+</button>{{/if}}
 		{{title}}
 	</div>
 </template>
