allowing anonymous users to see images; (partially) removed audio collection

--- a/newfilemanager.html
+++ b/newfilemanager.html
@@ -15,6 +15,7 @@
         {{else}}
         <h1>Available Images</h1>
         <p>Welcome! Please log in to upload or manage images.</p>
+        {{> imgList}}
         {{/if}}
     </div>
     {{> dialogAddImg}}
