adding file download button

--- a/newfilemanager.html
+++ b/newfilemanager.html
@@ -121,7 +121,7 @@
     {{#if selected}}
     {{fileImage collection="Images" class="imgItem selected"}}
     {{else}}
-    {{fileImage collection="Images" class="imgItem"}}
+    {{fileImage collection="Images" class="imgItem"}}<br/>{{cfsDownloadButton "Images" class="glyphicon glyphicon-cloud-download"}}
     {{/if}}
 </template>
 
